--- a/src/app/widget/widget.component.css
+++ b/src/app/widget/widget.component.css
@@ -1,6 +1,11 @@
+:host{
+  position: relative;
+}
 .flex{
   width: 400px;
   height: 400px;
   resize: both;
-  overflow: auto;  padding: 30px;
+  overflow: auto;
+  padding: 10px;
+  border: 1px solid black;
 }
